# ag_agent

app/: .api.env  gui.py  gui2.py  main.py  main_class_based.py  pyproject.toml  real_app.py  settings.py
app/.scratch/: temp_00cb57eb-216a-11f1-ae63-089204ded298_7990.apsimx  temp_00cb57eb-216a-11f1-ae63-089204ded298_7990.db  temp_01868c74-216c-11f1-85f2-089204ded298_7990.apsimx  temp_01868c74-216c-11f1-85f2-089204ded298_7990.db  temp_01c6b6d7-2175-11f1-a0fc-089204ded298_7990.apsimx  temp_01c6b6d7-2175-11f1-a0fc-089204ded298_7990.db  temp_037aa4cd-2163-11f1-8d65-089204ded298_7990.apsimx  temp_037aa4cd-2163-11f1-8d65-089204ded298_7990.db  temp_0424742a-2162-11f1-be39-089204ded298_7990.apsimx  temp_0424742a-2162-11f1-be39-089204ded298_7990.db  temp_05fb5e21-1e55-11f1-9f76-089204ded298_7990.apsimx  temp_073bf433-1d87-11f1-8da1-089204ded298_7990.db  temp_07a238cd-1e55-11f1-934f-089204ded298_7990.db  temp_07d9c34d-1e16-11f1-a831-089204ded298_7990.db  temp_08839a9d-1d9f-11f1-9749-089204ded298_7990.apsimx  temp_08839a9d-1d9f-11f1-9749-089204ded298_7990.db  temp_09e6db2e-20bb-11f1-ba0f-089204ded298_7990.apsimx  temp_09e6db2e-20bb-11f1-ba0f-089204ded298_7990.db  temp_0a0a17dc-1d89-11f1-beca-089204ded298_7990.db  temp_0dd70594-216c-11f1-b515-089204ded298_7990.apsimx  temp_0dd70594-216c-11f1-b515-089204ded298_7990.db  temp_0e2a5adb-216a-11f1-8f03-089204ded298_7990.apsimx  temp_0e2a5adb-216a-11f1-8f03-089204ded298_7990.db  temp_0fbc2c05-2162-11f1-826f-089204ded298_7990.apsimx  temp_0fbc2c05-2162-11f1-826f-089204ded298_7990.db  temp_11577f78-2175-11f1-992b-089204ded298_7990.apsimx  (+303 more)
(+79 files in other folders)
